--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,11 @@ repositories {
     mavenCentral()
 }
 
+
 dependencies {
+    implementation 'com.google.code.gson:gson:2.9.0'
+    implementation 'org.projectlombok:lombok:1.18.26'
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
